# blog-test

./: .env.docker  .gitignore  README.md  build.sh  docker-compose.yml  dockerfile  pyproject.toml
accounts/: admin.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_avatar_and_more.py  0003_alter_customuser_avatar.py
blog/: asgi.py  settings.py  urls.py
comments/: admin.py  consumers.py  filters.py  models.py  routing.py  serializers.py  services.py  urls.py  utils.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_rate_rating_alter_rate_unique_together.py  0003_alter_rate_unique_together.py  0004_alter_comment_parent.py  0005_alter_comment_parent.py  0006_alter_comment_options.py  0007_alter_comment_options.py
comments/static/comments/css/: index.css
comments/static/comments/js/: comment_builder.js  form_handler.js  websocket.js
comments/templates/comments/: test.html
db_schema/: db_arch.mwb  db_arch.mwb.bak
nginx/conf.d/: nginx.conf
